--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="home">
 
 <head>
     <meta charset="utf-8">
@@ -20,6 +20,33 @@
 </head>
 
 <body>
+    <!-- navbar -->
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+
+
+                <a href="#home" class="navbar-brand page-scroll">Halim Haidar</a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#about" class="page-scroll">About</a></li>
+                    <li><a href="#portfolio" class="page-scroll">Portfolio</a></li>
+                    <li><a href="#contact" class="page-scroll">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- akhir navbar -->
 
     <!-- jumbotron -->
     <div class="jumbotron text-center">
@@ -72,32 +99,32 @@
             <div class="row">
                 <div class="col-sm-4">
                     <a href="" class="thumbnail">
-                        <img src="img/1.jpg">
+                        <img src="">
                     </a>
                 </div>
                 <div class="col-sm-4">
                     <a href="" class="thumbnail">
-                        <img src="img/2.png">
+                        <img src="">
                     </a>
                 </div>
                 <div class="col-sm-4">
                     <a href="" class="thumbnail">
-                        <img src="img/1.jpg">
+                        <img src="">
                     </a>
                 </div>
                 <div class="col-sm-4">
                     <a href="" class="thumbnail">
-                        <img src="img/4.jpg">
+                        <img src="">
                     </a>
                 </div>
                 <div class="col-sm-4">
                     <a href="" class="thumbnail">
-                        <img src="img/3.jpg">
+                        <img src="">
                     </a>
                 </div>
                 <div class="col-sm-4">
                     <a href="" class="thumbnail">
-                        <img src="img/6.jpg">
+                        <img src="">
                     </a>
                 </div>
             </div>
@@ -179,9 +206,12 @@
 
     <!-- akhir footer -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/jquery.easing.1.3.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+
+    <script src="js/script.js"></script>
 </body>
 
 </html>
