--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#about" class="page-scroll">About</a></li>
-                    <li><a href="#portfolio" class="page-scroll">Portfolio</a></li>
-                    <li><a href="#contact" class="page-scroll">Contact</a></li>
+                    <li><a href="#about" class="page-scroll"><strong>About</strong></a></li>
+                    <li><a href="#portfolio" class="page-scroll"><strong>Portfolio</strong></a></li>
+                    <li><a href="#contact" class="page-scroll"><strong>Contact</strong></a></li>
                 </ul>
             </div>
         </div>
@@ -173,7 +173,7 @@
                             <textarea class="form-control" rows="10" placeholder="masukkan pesan"></textarea>
                         </div>
 
-                        <button type="submit" class="btn btn-primary">Kirim Pesan</button>
+                        <button type="submit" class="btn btn-primary"><strong>Kirim Pesan</strong></button>
 
                     </form>
                 </div>
@@ -197,7 +197,7 @@
             <div class="row">
                 <div class="col-sm-12">
                     <a href="http://instagram.com/halimhaidar" class=" btn btn-info"><i
-                            class="glyphicon glyphicon-user"></i> Ikuti Saya</a>
+                            class="glyphicon glyphicon-user"></i> <strong>Ikuti Saya</strong></a>
                 </div>
             </div>
         </div>
