--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
 
@@ -50,7 +50,7 @@
 
     <!-- jumbotron -->
     <div class="jumbotron text-center">
-        <img src="img/pp.jpg" class="img-circle">
+        <img src="img/pp.jpg" width="25%" class="img-circle">
         <h1>Halim Haidar</h1>
         <p>Web Developer | Blogger</p>
     </div>
@@ -99,32 +99,32 @@
             <div class="row">
                 <div class="col-sm-4">
                     <a href="" class="thumbnail">
-                        <img src="">
+                        <img src="img/1.png">
                     </a>
                 </div>
                 <div class="col-sm-4">
                     <a href="" class="thumbnail">
-                        <img src="">
+                        <img src="img/2.png">
                     </a>
                 </div>
                 <div class="col-sm-4">
                     <a href="" class="thumbnail">
-                        <img src="">
+                        <img src="img/3.png">
                     </a>
                 </div>
                 <div class="col-sm-4">
                     <a href="" class="thumbnail">
-                        <img src="">
+                        <img src="img/4.png">
                     </a>
                 </div>
                 <div class="col-sm-4">
                     <a href="" class="thumbnail">
-                        <img src="">
+                        <img src="img/5.png">
                     </a>
                 </div>
                 <div class="col-sm-4">
                     <a href="" class="thumbnail">
-                        <img src="">
+                        <img src="img/6.png">
                     </a>
                 </div>
             </div>
@@ -137,12 +137,14 @@
     <!-- contact -->
     <section class="contact" id="contact">
         <div class="container">
-            <div class="row">
-                <div class="col-sm-12 text-center">
+            <div class="row pt-4 mb-4">
+                <div class="col text-center">
                     <h2>Contact</h2>
                     <hr>
                 </div>
             </div>
+
+
 
             <div class="row">
                 <div class="col-sm-6 col-sm-offset-3">
