--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <!-- Akhir About -->
 
 
-    <!-- prtfolio -->
+    <!-- portfolio -->
     <section class="portfolio" id="portfolio">
         <div class="container">
             <div class="row">
@@ -98,7 +98,7 @@
 
             <div class="row">
                 <div class="col-sm-4">
-                    <a href="" class="thumbnail">
+                    <a href="companyprofile/index.html" class="thumbnail">
                         <img src="img/1.png">
                     </a>
                 </div>
