--- a/index.html
+++ b/index.html
@@ -197,10 +197,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-12">
+                <!-- <div class="col-sm-12">
                     <a href="http://instagram.com/halimhaidar" class=" btn btn-info"><i
                             class="glyphicon glyphicon-user"></i> <strong>Ikuti Saya</strong></a>
-                </div>
+                </div> -->
             </div>
         </div>
     </footer>
